--- a/PlantPlace/WebContent/index.html
+++ b/PlantPlace/WebContent/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <h1>Welcome to PlantPlaces.com!</h1>
-Promoting Pklant Diversity through Education. Hii 
+Promoting Plant Diversity through Education. Hii 
 </body>
 </html>
